--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,20 @@
     <title>Touch Grass Online!</title>
     <link rel="icon" type="image/png" href="icon.png">
     <link href="style.css" rel="stylesheet" type="text/css" />
+    
+    <!-- HTML Meta Tags -->
+    <title>Touch Grass - Touch grass from the comfort of your home</title>
+    <meta name="description" content="Touch Grass is an application that allows you to touch grass from the comfort of your own living space.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Touch Grass - Touch grass from the comfort of your home">
+    <meta property="og:description" content="Touch Grass is an application that allows you to touch grass from the comfort of your own living space.">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Touch Grass - Touch grass from the comfort of your home">
+    <meta name="twitter:description" content="Touch Grass is an application that allows you to touch grass from the comfort of your own living space.">
   </head>
   <body>
     <audio preload="auto" loop="true" volume="5" id="grass-audio">
