add theme color meta

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <!-- HTML Meta Tags -->
     <title>Touch Grass - Touch grass from the comfort of your home</title>
     <meta name="description" content="Touch Grass is an application that allows you to touch grass from the comfort of your own living space.">
+    <meta name="theme-color" content="#00FF00">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:type" content="website">
