quality of life changes

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="icon" type="image/png" href="grass.png">
     <link href="style.css" rel="stylesheet" type="text/css" />
     
     <!-- HTML Meta Tags -->
@@ -21,14 +21,9 @@
     <meta name="twitter:description" content="Touch Grass is an application that allows you to touch grass from the comfort of your own living space.">
   </head>
   <body>
-    <audio preload="auto" loop="true" volume="5" id="grass-audio">
-        <source src="grass.mp3"/>
-    </audio>
     <div id="grass-div"></div>
     <div id="text-div">
       <h1>Hover over the grass to touch it.</h1>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
   </body>
 </html>
